--- a/style.css
+++ b/style.css
@@ -27,18 +27,16 @@ h1{
     width: 100%;
     height: 100%;
     opacity: 1;
-  
 }
 .button{
     position: relative;
-  
 }
 .button img{
-    transition: .5s;
-}
-.button img:hover{
     width: 100%;
     height: 100%;
+    transition: .5s;
+}
+.button:hover img{
     opacity: .5;
 }
 .button i {
